--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sam Mina's Portfolio</title>
-    <link rel="icon" type="image/png" href="/favicon.ico"> <!-- Updated the href to point to the favicon in the public folder -->
+    <link rel="icon" type="image/png" href="/favicon.ico"> <!-- Points to the favicon in the public folder -->
 </head>
 <body>
     <div id="root"></div>
+
+    <!-- Include the main JavaScript entry point -->
+
+    <script type="module" src="/src/index.js"></script>
+    
 </body>
 </html>
