--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- Include the main JavaScript entry point -->
 
-    <script type="module" src="/src/index.js"></script>
+    <script type="module" src="/src/index.jsx"></script>
     
 </body>
 </html>
